messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue
  labels:
    app: django-app
    version: blue
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
        - name: django-app
          image: your-dockerhub-username/django-app:2.0
          ports:
            - containerPort: 8000
